[package]
name = "license-key"
version = "0.1.0"
authors = ["Patrik Svensson <patrik@patriksvensson.se>","gkgoat"]
description = "A license key system."
license = "MIT"
repository = "https://github.com/patriksvensson/license-key"
keywords = ["license", "license-generator", "software-license"]
edition = "2018"

[dependencies]
hex = "0.4.2"

[dev-dependencies]
criterion = "0.3"

[lib]
name = "license-key"

[[bench]]
name = "generator"
harness = false