[package]
name = "portal-pc-license-key"
version = "0.2.0"
authors = ["Patrik Svensson <patrik@patriksvensson.se>","gkgoat"]
description = "A license key system."
license = "MIT"
repository = "https://github.com/patriksvensson/license-key"
keywords = ["license", "license-generator", "software-license"]
edition = "2018"

[dependencies]
base2048 = { version = "2.0.2", optional = true }
hex = "0.4.2"
thiserror = "1.0.64"

[dev-dependencies]
criterion = "0.3"

[lib]
name = "license_key"

[[bench]]
name = "generator"
harness = false

[features]
base2048 = ["dep:base2048"]
